--- a/Selenium/test-output/index.html
+++ b/Selenium/test-output/index.html
@@ -48,7 +48,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\Muriel\AppData\Local\Temp\testng-eclipse--1021691013\testng-customsuite.xml</span>
+                    <span>C:\Users\Muriel\AppData\Local\Temp\testng-eclipse--1802720890\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -101,7 +101,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.skosay.test.register.ConsumerRegister" hash-for-method="testApplyNoValueOnPasswordAndConfirm">testApplyNoValueOnPasswordAndConfirm</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.skosay.test.register.ConsumerRegister" hash-for-method="testValid">testValid</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -124,9 +124,9 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="testApplyNoValueOnPasswordAndConfirm">
-                  </a> <!-- testApplyNoValueOnPasswordAndConfirm -->
-                  <span class="method-name">testApplyNoValueOnPasswordAndConfirm</span>
+                  <a name="testValid">
+                  </a> <!-- testValid -->
+                  <span class="method-name">testValid</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -134,7 +134,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Muriel\AppData\Local\Temp\testng-eclipse--1021691013\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Muriel\AppData\Local\Temp\testng-eclipse--1802720890\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -185,14 +185,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'testApplyNoValueOnPasswordAndConfirm')
+data.setCell(0, 1, 'testValid')
 data.setCell(0, 2, 'com.skosay.test.register.ConsumerRegister')
-data.setCell(0, 3, 6394);
+data.setCell(0, 3, 60254);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 6 seconds</span>
+              <span class="suite-total-time">Total running time: 1 minutes</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -224,12 +224,12 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
-                <span class="method-name">testApplyNoValueOnPasswordAndConfirm</span>
-                <span class="method-start">15941 ms</span>
+                <span class="method-name">testValid</span>
+                <span class="method-start">22480 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">22336 ms</span>
+                <span class="method-start">82735 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
