--- a/Selenium/test-output/index.html
+++ b/Selenium/test-output/index.html
@@ -48,7 +48,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\Muriel\AppData\Local\Temp\testng-eclipse--1329531671\testng-customsuite.xml</span>
+                    <span>C:\Users\Muriel\AppData\Local\Temp\testng-eclipse-349943684\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -101,7 +101,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.skosay.test.register.ConsumerRegister" hash-for-method="testApplyNoValueOnPassword">testApplyNoValueOnPassword</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.skosay.test.register.Register" hash-for-method="testApplyInvalidEmails">testApplyInvalidEmails</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -119,14 +119,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.skosay.test.register.ConsumerRegister</span>
+              <span class="class-name">com.skosay.test.register.Register</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="testApplyNoValueOnPassword">
-                  </a> <!-- testApplyNoValueOnPassword -->
-                  <span class="method-name">testApplyNoValueOnPassword</span>
+                  <a name="testApplyInvalidEmails">
+                  </a> <!-- testApplyInvalidEmails -->
+                  <span class="method-name">testApplyInvalidEmails</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -134,7 +134,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Muriel\AppData\Local\Temp\testng-eclipse--1329531671\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Muriel\AppData\Local\Temp\testng-eclipse-349943684\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -143,7 +143,7 @@
 &lt;suite name=&quot;Default suite&quot;&gt;
   &lt;test verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.skosay.test.register.ConsumerRegister&quot;/&gt;
+      &lt;class name=&quot;com.skosay.test.register.Register&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -185,14 +185,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'testApplyNoValueOnPassword')
-data.setCell(0, 2, 'com.skosay.test.register.ConsumerRegister')
-data.setCell(0, 3, 3531);
+data.setCell(0, 1, 'testApplyInvalidEmails')
+data.setCell(0, 2, 'com.skosay.test.register.Register')
+data.setCell(0, 3, 147427);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 3 seconds</span>
+              <span class="suite-total-time">Total running time: 2 minutes</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -218,19 +218,19 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.skosay.test.register.ConsumerRegister</div> <!-- chronological-class-name -->
-              <div class="configuration-class before">
+              <div class="chronological-class-name">com.skosay.test.register.Register</div> <!-- chronological-class-name -->
+              <div class="configuration-test before">
                 <span class="method-name">setUp</span>
                 <span class="method-start">0 ms</span>
-              </div> <!-- configuration-class before -->
+              </div> <!-- configuration-test before -->
               <div class="test-method">
-                <span class="method-name">testApplyNoValueOnPassword</span>
-                <span class="method-start">12516 ms</span>
+                <span class="method-name">testApplyInvalidEmails</span>
+                <span class="method-start">21505 ms</span>
               </div> <!-- test-method -->
-              <div class="configuration-class after">
-                <span class="method-name">tearDown</span>
-                <span class="method-start">16047 ms</span>
-              </div> <!-- configuration-class after -->
+              <div class="configuration-test after">
+                <span class="method-name">quit</span>
+                <span class="method-start">168933 ms</span>
+              </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
