--- a/Selenium/test-output/old/Default suite/methods-alphabetical.html
+++ b/Selenium/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8e8568">  <td>14/11/27 13:03:22</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ConsumerRegister.setUp()[pri:0, instance:com.skosay.test.register.ConsumerRegister@6ea6d14e]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@398887205</td>   <td></td> </tr>
-<tr bgcolor="8e8568">  <td>14/11/27 13:03:38</td>   <td>16045</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ConsumerRegister.tearDown()[pri:0, instance:com.skosay.test.register.ConsumerRegister@6ea6d14e]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@398887205</td>   <td></td> </tr>
-<tr bgcolor="8e8568">  <td>14/11/27 13:03:35</td>   <td>12513</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ConsumerRegister.testApplyNoValueOnPassword()[pri:0, instance:com.skosay.test.register.ConsumerRegister@6ea6d14e]">testApplyNoValueOnPassword</td> 
-  <td>main@398887205</td>   <td></td> </tr>
+<tr bgcolor="8e8568">  <td>14/12/02 17:54:22</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;Register.quit()[pri:0, instance:com.skosay.test.register.Register@7907ec20]">&lt;&lt;quit</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@997110508</td>   <td></td> </tr>
+<tr bgcolor="8e8568">  <td>14/12/02 17:51:33</td>   <td>-168930</td> <td>&nbsp;</td><td title="&gt;&gt;Register.setUp()[pri:0, instance:com.skosay.test.register.Register@7907ec20]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@997110508</td>   <td></td> </tr>
+<tr bgcolor="8e8568">  <td>14/12/02 17:51:55</td>   <td>-147428</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Register.testApplyInvalidEmails()[pri:0, instance:com.skosay.test.register.Register@7907ec20]">testApplyInvalidEmails</td> 
+  <td>main@997110508</td>   <td></td> </tr>
 </table>
